api get sub-district, rubocop
