# app/controllers/api/v1/rates_controller.rb
@@ -160,6 +160,46 @@ module Api
           }
         }, status: :internal_server_error
       end
+
+      def sub_district
+        client = Shipping::JneClient.new
+        data = client.check_sub_district(params[:district_id])
+
+        if data.present?
+          if data[:error]
+            render json: {
+              success: false,
+              error: {
+                code: "BAD_REQUEST",
+                message: data[:error]
+              }
+            }, status: data[:status]
+          else
+            render json: {
+              success: true,
+              message: "Sub-districts fetched successfully",
+              **Jne::SubDistrictSerializer.new(data).as_json
+            }, status: :ok
+          end
+        else
+          render json: {
+            success: false,
+            error: {
+              code: "BAD_REQUEST",
+              message: "Invalid request or courier service is unavailable."
+            }
+          }, status: :bad_request
+        end
+      rescue StandardError => e
+        Rails.logger.info e.message
+        render json: {
+          success: false,
+          error: {
+            code: "INTERNAL_ERROR",
+            message: "Terjadi kesalahan pada server. Coba lagi nanti"
+          }
+        }, status: :internal_server_error
+      end
     end
   end
 end
